# dcclicht

./: .gitignore  README.md  _config.yml  dcclicht.kibot.yaml  dcclicht.kicad_pcb  dcclicht.kicad_prl  dcclicht.kicad_pro  dcclicht.kicad_sch  index.md  pwm.kicad_sch  serial.kicad_sch
.github/workflows/: main.yml  rust.yml
Fabrication/: dcclicht-drc_.txt  dcclicht-erc_v0.1.txt  dcclicht_bom_fusion.csv  dcclicht_bom_jlc.csv  dcclicht_cpl_fusion.csv  dcclicht_cpl_jlc.csv  pcbnew_export_screencast.ogv
Fabrication/BoM/: dcclicht-bom_v0.1.csv  dcclicht-bom_v0.1.html  dcclicht-bom_v0.1.xlsx  dcclicht-ibom_.html
Fabrication/Drill/: dcclicht-NPTH_drill_.drl  dcclicht-NPTH_drill_.gbr  dcclicht-PTH_drill_.drl  dcclicht-PTH_drill_.gbr  dcclicht-drl.rpt
Fabrication/FusionPCB/: dcclicht.GBL  dcclicht.GBO  dcclicht.GBS  dcclicht.GML  dcclicht.GTL  dcclicht.GTO  dcclicht.GTS  dcclicht.TXT
Fabrication/Gerbers/: dcclicht-B_Cu_.gbr  dcclicht-B_Fab_.gbr  dcclicht-B_Mask_.gbr  dcclicht-B_Paste_.gbr  dcclicht-B_SilkS_.gbr  dcclicht-Dwgs_User_.gbr  dcclicht-Edge_Cuts_.gbr  dcclicht-F_Cu_.gbr  dcclicht-F_Fab_.gbr  dcclicht-F_Mask_.gbr  dcclicht-F_Paste_.gbr  dcclicht-F_SilkS_.gbr  dcclicht-job_.gbrjob
Fabrication/JLCPCB/: dcclicht-B_Cu_.gbr  dcclicht-B_Silkscreen_.gbr  dcclicht-Edge_Cuts_.gbr  dcclicht-F_Cu_.gbr  dcclicht-F_Silkscreen_.gbr  dcclicht-NPTH.drl  dcclicht-PTH.drl
software/rust/: .gitignore
software/rust/dcclicht/: .gitignore  Cargo.toml  rust-toolchain.toml
software/rust/dcclicht/.cargo/: config.toml
software/rust/dcclicht/src/: btn.rs  main.rs  menu.rs  pwm.rs
(+20 files in other folders)
