[package]
edition = "2021"
name = "dcclicht"
description = "Firmware for a Digital Command Control (DCC) decoder for switching IO loads."
documentation = "https://eurovibes.github.io/dcclicht/"
version = "0.1.0"
authors = ["Benedikt Spranger <b.spranger@linutronix.de>"]
license = "GPL-2.0-only"
keywords = ["modeltrain", "DCC"]

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [ "defmt", "stm32f103cb", "unstable-pac", "memory-x", "time-driver-any", "exti" ]  }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"

embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
